# Product-Signal

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: profile.yaml
src/product_signal/: __init__.py  config.py  fetch.py  reddit_client.py
tests/: conftest.py  test_config.py  test_fetch.py  test_reddit_client.py  test_smoke.py
tests/fixtures/: sample_posts.json
