[project]
name = "product-signal"
version = "2.0.0.dev0"
description = "Personal, non-commercial tool that reads public equipment-community discussion and organizes product pain points locally by manufacturer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    # On-device inference; Apple Silicon only, skipped on other platforms (e.g. CI).
    "mlx-lm>=0.29; platform_system == 'Darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
